--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.13.5",
+    "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^5.11.0",
     "@syncfusion/ej2-react-barcode-generator": "^24.2.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
